--- a/crates/common/Cargo.toml
+++ b/crates/common/Cargo.toml
@@ -26,6 +26,7 @@ crc32fast.workspace = true
 bytes.workspace = true
 hex.workspace = true
 lazy_static.workspace = true
+toml = { version = "0.8.19", features = ["parse"] }
 
 [dev-dependencies]
 hex-literal.workspace = true
