--- a/cmd/ef_tests/blockchain/Cargo.toml
+++ b/cmd/ef_tests/blockchain/Cargo.toml
@@ -8,7 +8,6 @@ ethrex-blockchain.workspace = true
 ethrex-common.workspace = true
 ethrex-storage.workspace = true
 ethrex-rlp.workspace = true
-ethrex-vm.workspace = true
 
 serde.workspace = true
 serde_json.workspace = true
@@ -23,8 +22,7 @@ datatest-stable = "0.2.9"
 path = "./lib.rs"
 
 [features]
-default = ["c-kzg", "blst"]
-blst = ["ethrex-vm/blst"]
+default = ["c-kzg"]
 c-kzg = ["ethrex-blockchain/c-kzg"]
 
 [[test]]
