--- a/.github/workflows/ci_l2.yaml
+++ b/.github/workflows/ci_l2.yaml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Run L2 integration test
         run: |
-          cd crates/l2
-          # cp .env.example .env
+          cd crates/common
+          cargo run jamon
+          mv .env ../l2/
+          cd ../l2/
           make ci_test
