--- a/crates/l2/Cargo.toml
+++ b/crates/l2/Cargo.toml
@@ -37,6 +37,7 @@ zkvm_interface = { path = "./prover/zkvm/interface/", features = ["l2"] }
 
 [dev-dependencies]
 rand = "0.8.5"
+test-casing = "0.1.3"
 
 [lib]
 path = "./l2.rs"
@@ -51,5 +52,4 @@ panic = "deny"
 
 [features]
 default = []
-levm-l2 = ["ethrex-vm/l2", "zkvm_interface/l2", "ethrex-blockchain/l2"]
 metrics = ["ethrex-metrics/l2"]
